chore(gitignore): add config.ini to .gitignore to prevent sensitive data exposure
The config.ini file is added to .gitignore to ensure that any sensitive
information or environment-specific configurations contained within it
are not accidentally committed to the repository. This helps maintain
security and privacy by keeping such data out of version control.

--- a/.gitignore
+++ b/.gitignore
@@ -163,4 +163,7 @@ cython_debug/
 # Snyk vuln scanner
 .dccache
 
+# Config file
+config.ini
+
 # End of https://www.toptal.com/developers/gitignore/api/flask,python,visualstudiocode
