ci(docker-publish.yml): trigger workflow on changes to Dockerfile and bm_monitor.py
Add paths to the push and pull_request triggers to ensure the workflow runs when changes are made to the Dockerfile or bm_monitor.py. This change ensures that the Docker image is rebuilt and published whenever there are updates to these critical files, maintaining the integrity and up-to-date status of the Docker image.

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -10,10 +10,18 @@ on:
     - cron: '37 5 * * *'
   push:
     branches: [ "main" ]
+    paths:
+      - 'Dockerfile'
+      - 'bm_monitor.py'
+
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
   pull_request:
     branches: [ "main" ]
+    paths:
+      - 'Dockerfile'
+      - 'bm_monitor.py'
+
 
 env:
   # Use docker.io for Docker Hub if empty
